# matstat

./: .gitignore  CMakeLists.txt  README.md  Session.vim  TODO.md  TODO.txt  calculator.cpp  calculator.hpp  data.txt  data2.txt  data3.txt  gaussian_datagen.lua  main.cpp  program_structure.drawio  random_numbers.txt  random_numbers2.txt  types.hpp
doc/: CMakeLists.txt
exprtk_cmake/src/: CMakeLists.txt  exprtk_benchmark.cpp  exprtk_binomial_coefficient.cpp  exprtk_bsm_benchmark.cpp  exprtk_calc.cpp  exprtk_collatz.cpp  exprtk_compilation_timeout.cpp  exprtk_exprgen.cpp  exprtk_factorize_fermat.cpp  exprtk_factorize_pollard.cpp  exprtk_funcall_benchmark.cpp  exprtk_game_of_life.cpp  exprtk_gcd.cpp  exprtk_groups_examples.cpp  exprtk_immutable_symbol_table_example.cpp  exprtk_instruction_primer.cpp  exprtk_loop_timeout_rtc.cpp  exprtk_montecarlo_e.cpp  exprtk_nthroot_bisection.cpp  exprtk_pi_10kdigits.cpp  exprtk_repl.cpp  exprtk_riddle.cpp  exprtk_rtc_overhead.cpp  exprtk_simple_example_02.cpp  exprtk_simple_example_10.cpp  exprtk_simple_example_19.cpp  exprtk_simple_example_23.cpp  exprtk_simple_example_24.cpp  exprtk_sumofprimes.cpp  exprtk_test.cpp  exprtk_vector_benchmark.cpp  exprtk_vector_benchmark_multithreaded.cpp  exprtk_vectorized_binomial_model.cpp  exprtk_wiener_process_pi.cpp
include/statistics/: CMakeLists.txt  classSeries.cpp  classSeries.hpp  dataSeries.cpp  dataSeries.hpp  dataVector.cpp  dataVector.hpp  dataVectorExprtk.hpp  dataVectorSet.cpp  dataVectorSet.hpp  densityChart.cpp  densityChart.hpp  distributionChart.cpp  distributionChart.hpp  distributionReproducer.cpp  distributionReproducer.hpp  plotBase.cpp  plotBase.hpp  relativeFrequencyChart.cpp  relativeFrequencyChart.hpp  statistics.cpp  statistics.hpp  statisticsExprtk.hpp  varSeries.cpp  varSeries.hpp
include/statistics/dataVector/: dataVector.hpp
include/statistics/dataVector/src/: beta.cpp  cdf.cpp  centralMoment.cpp  classSeries.cpp  counterKurtosis.cpp  dataVector.cpp  dv.cpp  exptrk.cpp  kolmConsentCriterion.cpp  kurtosis.cpp  kurtosisConfidence.cpp  kurtosisDeviation.cpp  mad.cpp  meanConfidence.cpp  meanDeviation.cpp  minMaxSize.cpp  pearConsentCriterion.cpp  rawMoment.cpp  removeOutliers.cpp  reproduceDistribution.cpp  skew.cpp  skewConfidence.cpp  skewDeviation.cpp  standardDeviation.cpp  standardize.cpp  transform.cpp  trim.cpp  turncatedMean.cpp  varSeries.cpp  varianceConfidence.cpp  varianceDeviation.cpp  variationCoef.cpp  walshAverages.cpp  writeToFile.cpp
src/: CMakeLists.txt  count.sh  main.cpp
src/exprtk/: readme.txt
src/exprtk/include/: exprtk.hpp
src/gui/: CMakeLists.txt
src/gui/include/: axisTickerExp.hpp  charts.hpp  densityChart.hpp  densityDialog.hpp  dialogBase.hpp  distributionChart.hpp  distributionDialog.hpp  distributionReproducerDialog.hpp  functionReproducerDialogBase.hpp  guiTypes.hpp  hypothesisDialogBase.hpp  hypothesisManagerDialog.hpp  infoDialogBase.hpp  mainWindow.hpp  namedWidget.hpp  plot2dBase.hpp  plot2dDialogBase.hpp  plot3dBase.hpp  plot3dDialogBase.hpp  plotBase.hpp  plotDialog.hpp  plotDialogBase.hpp  sectionedWidget.hpp  setDialogBase.hpp  setGeneratorDialog.hpp  spinBoxAction.hpp  transformationDialogBase.hpp  transformationFormulaEditorDialog.hpp  vectorChainCorelationCoeficientDialog.hpp  vectorChainField3dDialog.hpp  vectorChainFieldPlot3d.hpp  vectorChainInfoDialog.hpp  vectorChainPCAInfoDialog.hpp  vectorChainScatterPlotMatrix.hpp  vectorChainScatterPlotMatrixDialog.hpp  vectorContainerWidget.hpp  vectorDensityDialog.hpp  vectorDensityPlot.hpp  vectorDialog.hpp  vectorDistributionDialog.hpp  (+27 more)
src/gui/src/: Section.cpp  charts.cpp  densityChart.cpp  densityDialog.cpp  dialogBase.cpp  distribtuionDialog.cpp  distributionChart.cpp  distributionReproducerDialog.cpp  functionReproducerDialogBase.cpp  hypothesisManagerDialog.cpp  infoDialogBase.cpp  mainWindow.cpp  plot2dBase.cpp  plot2dDialogBase.cpp  plot3dBase.cpp  plot3dDialogBase.cpp  plotBase.cpp  plotDialog.cpp  plotDialogBase.cpp  rangeSlider.cpp  setDialogBase.cpp  setGeneratorDialog.cpp  transformationDilaogBase.cpp  transformationFormulaEditorDialog.cpp  vectorChainCorelationCoeficientsDialog.cpp  vectorChainFieldPlot3d.cpp  vectorChainInfoDialog.cpp  vectorChainPCAInfoDialog.cpp  vectorChainScatterPlotMatrix.cpp  vectorContainerWidget.cpp  vectorDensityDialog.cpp  vectorDensityPlot.cpp  vectorDialog.cpp  vectorDistribtuionDialog.cpp  vectorDistributionPlot.cpp  vectorDistributionReproducerDialog.cpp  vectorEntryDialogBase.cpp  vectorHypothesisDialog.cpp  vectorInfoDialog.cpp  vectorPairConnectionsTableInfoDialog.cpp  (+15 more)
src/qcustomplot/: CMakeLists.txt  qcustomplot.h
src/statistics/: CMakeLists.txt  classSeries.cpp  dataSeries.cpp  distributionReproducer.cpp  varSeries.cpp  vectorChain.cpp
src/statistics/include/: classSeries.hpp  dataSeries.hpp  distributionReproducer.hpp  varSeries.hpp  vectorChain.hpp  vectorExprtk.hpp
src/statistics/vector/: CMakeLists.txt
src/statistics/vector/include/: vector.hpp
src/statistics/vector/src/: beta.cpp  cdf.cpp  centralMoment.cpp  classSeries.cpp  counterKurtosis.cpp  distribution.cpp  exprtk.cpp  exptrk.cpp  hypothesis.cpp  interval.cpp  kolmConsentCriterion.cpp  kurtosis.cpp  mad.cpp  minMaxSize.cpp  pearConsentCriterion.cpp  quantile.cpp  ranks.cpp  rawMoment.cpp  removeOutliers.cpp  reproduceDistribution.cpp  skew.cpp  sorted.cpp  standardDeviation.cpp  standardize.cpp  transform.cpp  trim.cpp  turncatedMean.cpp  varSeries.cpp  varianceConfidence.cpp  varianceDeviation.cpp  variationCoef.cpp  vector.cpp  walshAverages.cpp  writeToFile.cpp
src/statistics/vector/tests/: CMakeLists.txt  quantile.cpp  ranks.cpp  studQuantile.cpp
src/statistics/vectorChain/: CMakeLists.txt
src/statistics/vectorChain/include/: vectorChain.hpp
src/statistics/vectorChain/src/: dc.cpp  hypothesis.cpp  pair_correlation.cpp  partial_corelation.cpp  plural_corelation.cpp  principal_component_analysis.cpp  r.cpp  regression.cpp  vectorChain.cpp
src/statistics/vectorPair/: CMakeLists.txt
src/statistics/vectorPair/include/: vectorPair.hpp
(+109 files in other folders)
